--- a/index.html
+++ b/index.html
@@ -12,6 +12,11 @@
   <section class="bgded overlay light" style="background-image:url('images/demo/backgrounds/01.png');">
     <div class="wrapper row0">
       <div id="topbar" class="hoc clear">
+
+        <a href="#" id="burgermenu">
+          <i class="fa fa-bars" aria-hidden="true"></i>
+        </a>
+
         <ul class="nospace">
           <li><a href="index.html"><i class="fa fa-lg fa-home"></i></a></li>
           <li><a href="#" title="Call Us"><i class="fa fa-phone"></i></a></li>
@@ -336,5 +341,8 @@
     </div>
   </div>
   <a id="backtotop" href="#top"><i class="fa fa-chevron-up"></i></a>
+
+  <script src="js/main.js"></script>
+
 </body>
 </html>
