--- a/index.html
+++ b/index.html
@@ -27,42 +27,43 @@
       </div>
     </div>
 
-    <div class="wrapper row1">
-      <div id="header" class="hoc clear">
-        <div id="logo" class="fl_left">
-          <h1><a href="index.html">David, 666th Lucifer street</a></h1>
+      <div class="wrapper row1 showMenu">
+        <div id="header" class="hoc clear">
+          <div id="logo" class="fl_left">
+            <h1><a href="index.html">David, 666th Lucifer street</a></h1>
+          </div>
+          <nav id="mainav" class="fl_right">
+            <ul class="clear">
+              <li class="active"><a href="index.html">Home</a></li>
+              <li><a class="drop" href="#">Pages</a>
+                <ul>
+                  <li><a href="pages/gallery.html">Gallery</a></li>
+                  <li><a href="pages/full-width.html">Full Width</a></li>
+                  <li><a href="pages/sidebar-left.html">Sidebar Left</a></li>
+                  <li><a href="pages/sidebar-right.html">Sidebar Right</a></li>
+                  <li><a href="pages/basic-grid.html">Basic Grid</a></li>
+                </ul>
+              </li>
+              <li><a class="drop" href="#">Dropdown</a>
+                <ul>
+                  <li><a href="#">Level 2</a></li>
+                  <li><a class="drop" href="#">Level 2 + Drop</a>
+                    <ul>
+                      <li><a href="#">Level 3</a></li>
+                      <li><a href="#">Level 3</a></li>
+                      <li><a href="#">Level 3</a></li>
+                    </ul>
+                  </li>
+                  <li><a href="#">Level 2</a></li>
+                </ul>
+              </li>
+              <li><a href="#">Link Text</a></li>
+              <li><a href="#">Link Text</a></li>
+            </ul>
+          </nav>
         </div>
-        <nav id="mainav" class="fl_right">
-          <ul class="clear">
-            <li class="active"><a href="index.html">Home</a></li>
-            <li><a class="drop" href="#">Pages</a>
-              <ul>
-                <li><a href="pages/gallery.html">Gallery</a></li>
-                <li><a href="pages/full-width.html">Full Width</a></li>
-                <li><a href="pages/sidebar-left.html">Sidebar Left</a></li>
-                <li><a href="pages/sidebar-right.html">Sidebar Right</a></li>
-                <li><a href="pages/basic-grid.html">Basic Grid</a></li>
-              </ul>
-            </li>
-            <li><a class="drop" href="#">Dropdown</a>
-              <ul>
-                <li><a href="#">Level 2</a></li>
-                <li><a class="drop" href="#">Level 2 + Drop</a>
-                  <ul>
-                    <li><a href="#">Level 3</a></li>
-                    <li><a href="#">Level 3</a></li>
-                    <li><a href="#">Level 3</a></li>
-                  </ul>
-                </li>
-                <li><a href="#">Level 2</a></li>
-              </ul>
-            </li>
-            <li><a href="#">Link Text</a></li>
-            <li><a href="#">Link Text</a></li>
-          </ul>
-        </nav>
       </div>
-    </div>
+
     <div id="pageintro" class="hoc clear">
       <article>
         <p>Aenean sagittis tincidunt</p>
@@ -342,7 +343,7 @@
   </div>
   <a id="backtotop" href="#top"><i class="fa fa-chevron-up"></i></a>
 
-  <script src="js/main.js"></script>
+  <script src="js/main.js" type="text/javascript" charset="utf-8"></script>
 
 </body>
 </html>
