fixes #3 add button back to top

--- a/index.html
+++ b/index.html
@@ -341,7 +341,7 @@
       <p class="fl_right">Template by <a target="_blank" href="https://www.ta-cru-jallai-oublier-ou-koi.com/" title="Free Website Templates">Best templates</a></p>
     </div>
   </div>
-  <a id="backtotop" href="#top"><i class="fa fa-chevron-up"></i></a>
+  <a id="backtotop"><i class="fa fa-chevron-up"></i></a>
 
   <script src="js/main.js" type="text/javascript" charset="utf-8"></script>
 
